debug message level extend.

--- a/Core/Template/lang/debug.lng
+++ b/Core/Template/lang/debug.lng
@@ -4,21 +4,25 @@ Level => [
 	APP
 	Category => [
 		.ja => [
-			-106 => システム
-			-105 => 言語
-			-104 => ビュー
-			-103 => モデル
-			-102 => ハンドラー
-			-101 => リソース
+			-115 => システム
+			-114 => 言語
+			-113 => ビュー
+			-112 => モデル
+			-111 => ハンドラー
+			-110 => リソース
+			-109 => ヘルパー
+			-108 => デバッグ
 			-100 => エラー
 		]
         .en => [
-            -106 => System
-            -105 => Locale
-            -104 => View
-            -103 => Model
-            -102 => Handler
-            -101 => Resource
+            -115 => System
+            -114 => Locale
+            -113 => View
+            -112 => Model
+            -111 => Handler
+            -110 => Resource
+            -109 => Helper
+            -108 => Debugger
             -100 => ERROR
         ]
 	]
