add reset submit in login layout

--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -136,6 +136,10 @@ calendarTitle =>[
 		.ja=> ログイン
 		.en=> Login
 	]
+	Reset=>[
+		.ja=> リセット
+		.en=> RESET
+	]
 	PassError=>[
 		.ja=> パスワードが違います
 		.en=> 'Password Missing'
