アップロード禁止メッセージ追加

--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -37,6 +37,7 @@
     AbortDone   => "送信完了しました."
     MAXFILE     => "送信ァイルは %d 個までです"
     BADFILE     => "'+','%','#' 文字を使用するとブラウザからダウンロードできなくなります！"
+	FORBIDDEN	=> "実行可能なファイルをアップロードすることはできません！"
 ]
 .en => [
     // for Dialog
