--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -174,6 +174,10 @@ dateNames => [
 		.ja=> 不明なユーザー
 		.en=> "Unknown USER"
 	]
+	PassLimit=>[
+		.ja=> パスワード期限切れ
+		.en=> "Password Expired"
+	]
 ]
 
 SiteMenu=>[
