--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -40,9 +40,10 @@
 	FORBIDDEN	=> "実行可能なファイルをアップロードすることはできません！"
 	EMPTY		=> (空)
 	Placeholder	=> 選択または直接入力
-	NUMERIC		=> "数値 (##.#) で入力"
-	DATEFMT		=> "日付 (YYYY/mm/dd) で入力"
-	TIMESTAMP	=> "日時 (YYYY/mm/dd HH:nn:ss) で入力"
+	NUMERIC		=> "数値 (##.#) で入力してください"
+	DATEFMT		=> "日付 (YYYY/mm/dd) で入力してください"
+	TIMESTAMP	=> "日時 (YYYY/mm/dd HH:nn:ss) で入力してください"
+	CAUTION		=> "警告！"
 ]
 .en => [
     // for Dialog
@@ -81,6 +82,7 @@
 	NUMERIC		=> "Input NUMERIC (##.#) charactors"
 	DATEFMT		=> "Input DATE (YYYY/mm/dd) format"
 	TIMESTAMP	=> "Input TIMESTAMP (YYYY/mm/dd HH:nn:ss)"
+	CAUTION		=> "CAUTION !"
 ]
 // ページャーボタン表示用  for Pager Buttons
 Page=>[
