--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -41,6 +41,9 @@
 	EMPTY		=> (空)
 	Placeholder	=> 選択または直接入力
 	NUMERIC		=> '数値 (##.#) で入力してください'
+	NUMBER		=> '整数 (###) で入力してください'
+	ALPHABET	=> '英文字 (a-zA-Z) で入力してください'
+	ALPHANUM	=> '英数字で入力してください'
 	DATEFMT		=> '日付 (YYYY/mm/dd) で入力してください'
 	TIMESTAMP	=> '日時 (YYYY/mm/dd HH:nn:ss) で入力してください'
 	CAUTION		=> '警告！'
@@ -83,6 +86,9 @@
 	EMPTY		=> (EMPTY)
 	Placeholder	=> 'Select or DirectInput'
 	NUMERIC		=> 'Input NUMERIC (##.#) charactors'
+	NUMBER		=> 'Input NUMBER (###) charactors'
+	ALPHABET	=> 'Input ALPHABET (a-zA-Z) charactors'
+	ALPHANUM	=> 'Input ALPHABET or NUMBER charactors'
 	DATEFMT		=> 'Input DATE (YYYY/mm/dd) format'
 	TIMESTAMP	=> 'Input TIMESTAMP (YYYY/mm/dd HH:nn:ss)'
 	CAUTION		=> 'CAUTION !'
